--- a/src/PNNLProteomics/PNNLProteomics.csproj
+++ b/src/PNNLProteomics/PNNLProteomics.csproj
@@ -113,13 +113,17 @@
     <Compile Include="Analysis\clsHistogram.cs" />
     <Compile Include="Analysis\clsLinearNormalizer.cs" />
     <Compile Include="Cephes\clsMathUtilities.cs" />
+    <Compile Include="Data\DatasetInformation.cs" />
+    <Compile Include="Data\DeisotopingTool.cs" />
+    <Compile Include="Data\Factors\FactorInformation.cs" />
+    <Compile Include="Data\LabelingType.cs" />
     <Compile Include="Filters\FilterUtil.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Filters\UMCClusterFilters.cs" />
     <Compile Include="Filters\UMCFilters.cs" />
+    <Compile Include="ICloneable.cs" />
     <Compile Include="IO\XAMTReader.cs" />
-    <Compile Include="MultiAlign\classMultiAnalysisConverters.cs" />
-    <Compile Include="MultiAlign\clsMultiAlignAnalysis.cs" />
+    <Compile Include="MultiAlign\MultiAlignAnalysis.cs" />
     <Compile Include="Analysis\clsNormalize.cs" />
     <Compile Include="Analysis\clsTTest.cs" />
     <Compile Include="Analysis\clsTTestVals.cs" />
@@ -128,8 +132,7 @@
     <Compile Include="Data\clsPair.cs" />
     <Compile Include="Data\Cluster\classClusterDataSummaryAttr.cs" />
     <Compile Include="Data\Cluster\classClusterMassTagMatch.cs" />
-    <Compile Include="Data\enmToolID.cs" />
-    <Compile Include="Data\Factors\classFactorDefinition.cs" />
+    <Compile Include="Data\Factors\FactorDefinitions.cs" />
     <Compile Include="Data\Factors\classFactorTree.cs" />
     <Compile Include="Data\Factors\classTreeNode.cs" />
     <Compile Include="Data\Factors\classTreeNodeConverter.cs" />
