Issue #252 I fixed the analysis objects, how they write data, and where the errors get propogated along with downloading datasets more effectively so error messages for poorly loaded data are propogated back out as well.

--- a/src/PNNLProteomics/PNNLProteomics.csproj
+++ b/src/PNNLProteomics/PNNLProteomics.csproj
@@ -122,6 +122,9 @@
     <Compile Include="Filters\UMCClusterFilters.cs" />
     <Compile Include="Filters\UMCFilters.cs" />
     <Compile Include="ICloneable.cs" />
+    <Compile Include="IO\IMultiAlignAnalysisReader.cs" />
+    <Compile Include="IO\IMultiAlignAnalysisWriter.cs" />
+    <Compile Include="IO\IOProgressEventArgs.cs" />
     <Compile Include="IO\XAMTReader.cs" />
     <Compile Include="MultiAlign\Hibernate\Domain\Factor.cs" />
     <Compile Include="MultiAlign\Hibernate\Domain\MassTagConformation.cs" />
