--- a/src/MultiAlignWin/MultiAlignWin.csproj
+++ b/src/MultiAlignWin/MultiAlignWin.csproj
@@ -329,6 +329,7 @@
     <Compile Include="Forms\TableWriterColumnOptionsForm.Designer.cs">
       <DependentUpon>TableWriterColumnOptionsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="IO\AnalysisAlignmentDataWriter.cs" />
     <Compile Include="IO\AnalysisSQLiteDBWriter.cs" />
     <Compile Include="IO\AnalysisTableWriter.cs" />
     <Compile Include="IO\AnalysisAbundanceTableWriter.cs" />
@@ -345,11 +346,15 @@
     <Compile Include="Forms\frmSaveFactors.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="IO\AnalysisBinaryReader.cs" />
+    <Compile Include="IO\AnalysisBinaryWriter.cs" />
     <Compile Include="IO\DatabaseDatasetIDLoader.cs" />
     <Compile Include="IO\DatabaseDatasetLoader.cs" />
+    <Compile Include="IO\DatasetDownloader.cs" />
     <Compile Include="IO\DiskDatasetLoader.cs" />
     <Compile Include="IO\DelegatesLoading.cs" />
     <Compile Include="IO\DMSDatasetSearchOptions.cs" />
+    <Compile Include="IO\FileCopyEventArgs.cs" />
     <Compile Include="IO\IAnalysisWriter.cs" />
     <Compile Include="IO\TableWriterColumnOptions.cs" />
     <Compile Include="Network\clsDMSConnectionTester.cs" />
@@ -562,10 +567,6 @@
       <DependentUpon>WelcomeWizardPage.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmAnalysisWizard.resx">
-      <DependentUpon>frmAnalysisWizard.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -588,6 +589,7 @@
     <Content Include="Bitmaps\perform.png" />
     <Content Include="Bitmaps\wizard.gif" />
     <Content Include="MultiAlign.ico" />
+    <None Include="Resources\asdfasdfas.txt" />
     <None Include="Resources\smart.png" />
     <None Include="Resources\scoring.png" />
     <None Include="Resources\intensityFilterHighBad.png" />
