--- a/src/PNNLProteomics/PNNLProteomics.csproj
+++ b/src/PNNLProteomics/PNNLProteomics.csproj
@@ -108,45 +108,45 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-	<Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
-	  <SpecificVersion>True</SpecificVersion>
-	  <HintPath>..\..\lib\x86\System.Data.SQLite.dll</HintPath>
-	  <Private>True</Private>
-	</Reference>
-	<Reference Include="SMARTWrapper, Version=1.0.3699.24788, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+      <SpecificVersion>True</SpecificVersion>
+      <HintPath>..\..\lib\x86\System.Data.SQLite.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SMARTWrapper, Version=1.0.3699.24788, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\x86\SMARTWrapper.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
-	<Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
-	  <SpecificVersion>True</SpecificVersion>
-	  <HintPath>..\..\lib\x64\System.Data.SQLite.dll</HintPath>
-	  <Private>True</Private>
-	</Reference>
-	<Reference Include="SMARTWrapper, Version=1.0.3923.14706, Culture=neutral, processorArchitecture=AMD64">
+    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
+      <SpecificVersion>True</SpecificVersion>
+      <HintPath>..\..\lib\x64\System.Data.SQLite.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SMARTWrapper, Version=1.0.3923.14706, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\x64\SMARTWrapper.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-	<Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
-	   <SpecificVersion>True</SpecificVersion>
-	   <HintPath>..\..\lib\x86\System.Data.SQLite.dll</HintPath>
-	   <Private>True</Private>
+    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+      <SpecificVersion>True</SpecificVersion>
+      <HintPath>..\..\lib\x86\System.Data.SQLite.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-	<Reference Include="SMARTWrapper, Version=1.0.3699.24788, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="SMARTWrapper, Version=1.0.3699.24788, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\x86\SMARTWrapper.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
-	<Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
-	   <SpecificVersion>True</SpecificVersion>
-	   <HintPath>..\..\lib\x64\System.Data.SQLite.dll</HintPath>
-	   <Private>True</Private>
-	</Reference>
-	<Reference Include="SMARTWrapper, Version=1.0.3923.14706, Culture=neutral, processorArchitecture=AMD64">
+    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
+      <SpecificVersion>True</SpecificVersion>
+      <HintPath>..\..\lib\x64\System.Data.SQLite.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SMARTWrapper, Version=1.0.3923.14706, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\x64\SMARTWrapper.dll</HintPath>
     </Reference>
@@ -194,7 +194,9 @@
     <Compile Include="IO\IMultiAlignAnalysisWriter.cs" />
     <Compile Include="IO\IOProgressEventArgs.cs" />
     <Compile Include="IO\XAMTReader.cs" />
+    <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\FactorDAOHibernate.cs" />
     <Compile Include="MultiAlign\Hibernate\Domain\DAOHibernate\DatasetDAOHibernate.cs" />
+    <Compile Include="MultiAlign\Hibernate\Domain\DAO\IFactorDAO.cs" />
     <Compile Include="MultiAlign\Hibernate\Domain\DAO\IDatasetDAO.cs" />
     <Compile Include="MultiAlign\Hibernate\Domain\Factor.cs" />
     <Compile Include="MultiAlign\Hibernate\Domain\MassTagConformation.cs" />
